[project]
name = "lidar-section"
version = "0.1.0"
description = "Intel LiDAR 点群から断面プロファイルを抽出し差分を可視化する"
readme = "README.md"
requires-python = ">=3.12,<3.13"

# 堤体内水位図化で使用（notebook 実行時は ipykernel）
dependencies = [
    "numpy>=2.0,<3",
    "pandas>=2.0",
    "matplotlib>=3.8",
    "scipy>=1.10",
    "natsort>=8.0",
    "PyYAML>=6",
    "ipykernel>=6",
]

[tool.uv]
managed = true
